--- a/src/components/styles/Features.css
+++ b/src/components/styles/Features.css
@@ -27,6 +27,8 @@
 }
 
 .feature-item {
+  display: flex;
+  flex-direction: column; 
   position: relative;
   background: white;
   padding: 40px 30px;
