--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -8,6 +8,8 @@
   font-size: 1.5rem;
   font-weight: bold;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .nav-link {
@@ -38,4 +40,13 @@
 
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.9)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+/* Add styles for the logo */
+.navbar-logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
 }
